Fix mac build error (#16)
* repo-sync-2024-10-11T15:57:26+0800

* fix mac build error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,5 +76,5 @@ workflows:
             .circleci/continue-config.yml sdk-build-and-run true
             dataproxy_sdk/.* sdk-build-and-run true
             .bazelrc sdk-build-and-run true
-            WORKSPACE sdk-build-and-run true
+            MODULE.bazel sdk-build-and-run true
       - lint
