--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -44,13 +44,14 @@ pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
     pip.parse(
         hub_name = "dataproxy_sdk_pip",
         python_version = python_version,
-        requirements_linux = "//dataproxy_sdk/python:requirements_lock_{}.txt".format(python_version.replace(".", "_")),
+        requirements_lock = "//dataproxy_sdk/python:requirements_lock_{}.txt".format(python_version.replace(".", "_")),
     )
     for python_version in SUPPORTED_PYTHON_VERSIONS
 ]
 
 use_repo(pip, "dataproxy_sdk_pip")
 
+bazel_dep(name = "apple_support", version = "1.17.1")
 bazel_dep(name = "arrow", version = "14.0.2")
 bazel_dep(name = "rules_foreign_cc", version = "0.13.0")
 bazel_dep(name = "spdlog", version = "1.14.1")
