--- a/.bcr/dataproxy_sdk/cc/presubmit.yml
+++ b/.bcr/dataproxy_sdk/cc/presubmit.yml
@@ -13,4 +13,4 @@ tasks:
     platform: ${{ platform }}
     bazel: ${{ bazel }}
     build_targets:
-      - "@dataproxy//..."
+      - "@dataproxy_sdk_cc//..."
