--- a/dataproxy-server/pom.xml
+++ b/dataproxy-server/pom.xml
@@ -41,6 +41,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.secretflow</groupId>
+            <artifactId>dataproxy-plugin-hive</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
