--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,11 @@
                 <artifactId>dataproxy-plugin-odps</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.secretflow</groupId>
+                <artifactId>dataproxy-plugin-hive</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <!-- dataproxy package end -->
 
         </dependencies>
