--- a/dataproxy-plugins/dataproxy-plugin-hive/pom.xml
+++ b/dataproxy-plugins/dataproxy-plugin-hive/pom.xml
@@ -1,6 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.secretflow</groupId>
         <artifactId>dataproxy-plugins</artifactId>
@@ -15,48 +16,75 @@
     <url>https://maven.apache.org</url>
 
     <dependencies>
+        <!-- Lombok for annotations -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <!-- Apache Arrow -->
         <dependency>
             <groupId>org.apache.arrow</groupId>
             <artifactId>arrow-memory-core</artifactId>
         </dependency>
+
+        <!-- Hive JDBC + Exclude default logging -->
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-jdbc</artifactId>
             <version>4.0.1</version>
-            <classifier>standalone</classifier>
             <exclusions>
                 <exclusion>
-                    <groupId>org.eclipse.jetty.aggregate</groupId>
-                    <artifactId>*</artifactId>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-reload4j</artifactId>
                 </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- Hive RPC (needed for TCLIService) -->
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-service-rpc</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+
+        <!-- Thrift -->
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.17.0</version>
+        </dependency>
+
+        <!-- Hadoop for Hive JDBC -->
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>3.3.6</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-reload4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-service</artifactId>
+            <version>4.0.1</version>
+            <exclusions>
                 <exclusion>
                     <groupId>ch.qos.logback</groupId>
                     <artifactId>logback-classic</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-bom</artifactId>
-            <version>${slf4j.version}</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.apache.thrift</groupId>-->
-<!--            <artifactId>libthrift</artifactId>-->
-<!--            <version>0.21.0</version>-->
-<!--        </dependency>-->
-
+        <!-- MySQL JDBC driver -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>9.3.0</version>
         </dependency>
+
 
     </dependencies>
 </project>
