--- a/dataproxy-server/pom.xml
+++ b/dataproxy-server/pom.xml
@@ -64,6 +64,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.arrow</groupId>
+            <artifactId>flight-core</artifactId>
+        </dependency>
 
     </dependencies>
 
