--- a/dataproxy-plugins/dataproxy-plugin-database/pom.xml
+++ b/dataproxy-plugins/dataproxy-plugin-database/pom.xml
@@ -8,8 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-
-    <artifactId>dataproxy-plugin-hive</artifactId>
+    <artifactId>dataproxy-plugin-database</artifactId>
     <packaging>jar</packaging>
 
     <name>dataproxy-plugin-hive</name>
@@ -85,6 +84,11 @@
             <version>9.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc11</artifactId>
+            <version>12.2.0.1</version>
+        </dependency>
 
     </dependencies>
 </project>
